modules/gdscript/tests/scripts/analyzer/errors/local_const_as_type_use_before_declared.gd
enum MyEnum {}

func test():
	var e: E
	const E = MyEnum
